# universal_robot

ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_moveit_config/config/: joint_limits.yaml  kinematics.yaml  ur5.srdf
ur5_moveit_config/launch/: demo.launch  move_group.launch  moveit.rviz  trajectory_execution.launch.xml
ur_description/urdf/: ur5.urdf.xacro  ur5_joint_limited_robot.urdf.xacro  ur5_robot.urdf.xacro
ur_driver/: test_io.py
ur_driver/src/ur_driver/: driver.py  io_interface.py
ur_gazebo/launch/: ur5.launch
ur_gazebo/models/: box.urdf  llave12.dae  llave16.stl  llave19.stl
ur_modern_driver/: test_move.py
ur_tests/: CMakeLists.txt  package.xml
ur_tests/launch/: pcl_read.launch  pcl_write.launch  test.launch
ur_tests/pcd/: handle_095.pcd  handle_105.pcd  handle_115.pcd  handle_125.pcd  handle_135.pcd  handle_140.pcd  handle_145.pcd  handle_155.pcd  handle_165.pcd  handle_175.pcd  handle_185.pcd
ur_tests/src/: laser2pcl.cpp  pcl_read.cpp  pcl_write.cpp  test1.cpp  test2.cpp
